# advent-of-code

./: .gitignore  2016_19-idea.txt  LICENSE  README.md  aoc_2024_22.bench.txt  aoc_data.json  cargo.toml  get-aocTitles.ps1  justfile  new-aoc.ps1
aoc_2016_01/: cargo.toml
aoc_2016_02/: cargo.toml
aoc_2016_03/: cargo.toml
aoc_2016_04/: cargo.toml
aoc_2016_05/: cargo.toml
aoc_2016_06/: cargo.toml
aoc_2016_07/: cargo.toml
aoc_2016_08/: cargo.toml
aoc_2016_09/: Cargo.toml
aoc_2016_10/: Cargo.toml
aoc_2016_11/: Cargo.toml
aoc_2020_01/: cargo.toml
aoc_2020_02/: cargo.toml
aoc_2021_01/: cargo.toml
aoc_2021_12/: cargo.toml
aoc_2021_13/: cargo.toml
aoc_2021_14/: cargo.toml
aoc_2021_15/: cargo.toml
aoc_2021_16/: cargo.toml
aoc_2021_19/: cargo.toml
aoc_2022_01/: cargo.toml
aoc_2022_02/: cargo.toml
aoc_2022_03/: cargo.toml
aoc_2022_04/: cargo.toml
aoc_2022_05/: cargo.toml
aoc_2022_06/: cargo.toml
aoc_2022_07/: cargo.toml
aoc_2022_08/: cargo.toml
aoc_2022_09/: cargo.toml
aoc_2022_10/: cargo.toml
aoc_2022_11/: cargo.toml
aoc_2022_12/: cargo.toml
aoc_2022_13/: cargo.toml
aoc_2022_14/: cargo.toml
aoc_2022_15/: cargo.toml
aoc_2022_16/: cargo.toml
aoc_2022_17/: cargo.toml
aoc_2022_18/: cargo.toml
aoc_2022_20/: cargo.toml
aoc_2022_21/: cargo.toml
aoc_2022_23/: cargo.toml
aoc_2022_24/: cargo.toml
aoc_2023_01/: cargo.toml
aoc_2023_02/: cargo.toml
aoc_2023_03/: cargo.toml
aoc_2023_04/: cargo.toml
aoc_utils/: Cargo.toml
aoc_utils/src/: grid.rs  k_d_tree.rs  lib.rs  number_parser.rs
assets/: Tree.ans
(+191 files in other folders)
